# mini-lakehouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  testing.py  testing2.py
database/: schema.sql
pipeline/: bronze.py  config.py  gold.py  silver.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
