[project]
name = "mini-data-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.44.59",
    "boto3>=1.42.69",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
